kubernetes/apps/monitoring/grafana/instance/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
  - grafana.milton.mcf.io
  parentRefs:
  - name: internal
    namespace: ingress-system
  rules:
  - backendRefs:
    - name: grafana-service
      port: 3000
